--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -1,5 +1,5 @@
 version: "1"
 rules:
   - base: master
-    upstream: basarat:master
+    upstream: basarat/typescript-book:master
     mergeMethod: hardreset
