Revert "add upstream repo name"
This reverts commit 08677c6142b10cf8849a4c6308c018ca16920e99.

--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -1,5 +1,5 @@
 version: "1"
 rules:
   - base: master
-    upstream: basarat/typescript-book:master
+    upstream: basarat:master
     mergeMethod: hardreset
